--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,5 @@
-# Python Function App to Linux on Azure
-# Build a Python function app and deploy it to Azure as a Linux function app.
+# Python Web App to Linux on Azure
+# Build a Python WebApp and deploy it to Azure as a Linux WebApp.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 
 on:
@@ -7,39 +7,47 @@ on:
     branches:
       - master
 
-name: Build and deploy Python Function app
+name: Build and deploy Python app
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+
     # checkout the repo
     - uses: actions/checkout@master
 
-    - name: Setup python
+    # setup python
+    - name: Setup Python 3.7
       uses: actions/setup-python@v1
       with:
-        python-version: 3.6
+        python-version: 3.7
 
-    - uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS_292732fe-05fd-40 }}
-
-    - name: 'Run pip'
-      shell: bash
+    # install dependencies
+    - name: python install
       working-directory: app
       run: |
-        python -m pip install --upgrade pip
-        python -m venv --copies worker_venv
-        source worker_venv/bin/activate
+        sudo apt install python3.7-venv
+        python -m venv --copies antenv
+        source antenv/bin/activate
+        pip install setuptools
         pip install -r requirements.txt
 
-    # deploy web app using publish profile credentials
-    - name: 'Run Azure Functions Action'
-      uses: Azure/functions-action@v1
+    # Azure login
+    - uses: azure/login@v1
       with:
-        app-name: kuvnodelnxfa
-        package: app
+        creds: ${{ secrets.AZURE_CREDENTIALS_ebfa79f5-5333-40 }}
+
+    - uses: azure/appservice-settings@v1
+      with:
+        app-name: kuvlnxwa
+        general-settings-json: '{"linuxFxVersion": "PYTHON|3.7"}' #'General configuration settings as Key Value pairs'
+
+    # deploy web app
+    - uses: azure/webapps-deploy@v1
+      with:
+        app-name: kuvlnxwa
+        package: .
 
     # Azure logout
     - name: logout
